--- a/studentManagmentSystem/src/main/resources/application.properties
+++ b/studentManagmentSystem/src/main/resources/application.properties
@@ -6,10 +6,11 @@ spring.datasource.password=root
 #ORM s/w specific properties
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
 
-spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL5InnoDBDialect
+#spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
+
+#spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL5InnoDBDialect
+
 #exception handling
-#spring.mvc.throw-exception-if-no-handler-found=true
-#spring.web.resources.add-mappings=false
-#server.port=8080
+spring.mvc.throw-exception-if-no-handler-found=true
+spring.web.resources.add-mappings=false
